2010-12-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandoradb.sql, extras/pandoradb_migrate_v3.1_to_v3.2.sql: increment the
	size of field "nombre" in table "tagente" for html entities.
	
	Fixes: #3136610

2010-12-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_html.php, include/ajax/module.php: fixed when the module
	have a scape html chars.

2010-12-03  Sergio Martin <sergio.martin@artica.es>

	* operation/search_agents.php: Fixed alert fired number of modules
	and colour of Last contact in the agent table main search for bugs
	3126434 and 3126437

2010-11-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/estado_ultimopaquete.php: fixed when the string data of
	module is number.

2010-11-29  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_operation_visual_console.php: Added a new
	help file in Japanese.

2010-11-26  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/exportdata.php: fixed the work_period to extract
	data when the default work_period is greater than period between the
	date to start and date to end.
	
	Fixes: #3119467

2010-11-26  Dario Rodriguez  <dario.rodriguez@artica.es>

	* extensions/plugin_registration.php: Fixed a bug related with html
	entities in plugin registration

2010-11-25  Raúl Mateos  <raulofpandora@gmail.com>
	
	* pandora_console_install: spaces to tabs. Small version correction.

2010-11-25  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Version update.

	* pandora_console.spec: Version update.

2010-11-25  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_console.redhat.spec: erased unrequired dependecy
	"graphviz-php" and upset the version required for php.

2010-11-25  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: erase the problematic
	foreign key in trecon_task.
	
	Fixes: #3118273
	
	* godmode/servers/recon_script.php: when I readed source code for